--- a/.github/workflows/mainwf.yml
+++ b/.github/workflows/mainwf.yml
@@ -27,9 +27,9 @@ jobs:
 
       - name: Install ansible
         run: |
-          apt install software-properties-common,
-          add-apt-repository --yes --update ppa:ansible/ansible,
-          apt install ansible
+          sudo apt install software-properties-common,
+          sudo add-apt-repository --yes --update ppa:ansible/ansible,
+          sudo apt install ansible
 
       - name: Deploy
         run: |
