--- a/.github/workflows/mainwf.yml
+++ b/.github/workflows/mainwf.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Install ansible
         run: |
+          sudo apt update,
           sudo apt install software-properties-common,
           sudo add-apt-repository --yes --update ppa:ansible/ansible,
           sudo apt install ansible
