--- a/.github/workflows/mainwf.yml
+++ b/.github/workflows/mainwf.yml
@@ -26,9 +26,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install ansible
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.7'
         run: |
-          sudo apt install python3-pip,
-          pip3 install ansible
+          python -m pip install --upgrade pip,
+          pip install ansible
 
       - name: Deploy
         run: 'echo "$SSH_PRIVATE_KEY" > key; ./deploy_server.sh key'
