--- a/.github/workflows/mainwf.yml
+++ b/.github/workflows/mainwf.yml
@@ -25,11 +25,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Install ansible
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           # Semantic version range syntax or exact version of a Python version
           python-version: '3.7'
+
+      - name: Install ansible
         run: |
           python -m pip install --upgrade pip,
           pip install ansible
