--- a/.github/workflows/mainwf.yml
+++ b/.github/workflows/mainwf.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install ansible
         run: |
-          python -m pip install --upgrade pip,
+          python -m pip install --upgrade pip
           pip install ansible
 
       - name: Deploy
