--- a/.github/workflows/mainwf.yml
+++ b/.github/workflows/mainwf.yml
@@ -40,5 +40,5 @@ jobs:
         run: 'echo "$SSH_PRIVATE_KEY" > key; chmod 400 key; ./deploy_server.sh key'
         shell: bash
         env:
-          SSH_KEY: ${{secrets.SSH_PRIVATE_KEY}}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
