Fix sync in playbook

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -25,7 +25,7 @@
     - name: Synchronize app
       become: yes
       synchronize:
-        src: ./
+        src: ./../
         dest: "{{ DEST_PATH }}"
         delete: yes
         recursive: true
